@@ -80,6 +80,10 @@ Keep relative URIs within \fIROOT_URI\fR.
 Parse \fIINPUT\fR as a string (terminates options).
 
 .TP
+.BR \-t
+Write terser output without newlines.
+
+.TP
 .BR \-v
 Display version information and exit.
 
